# dev-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/ai_dev_assistant/: __init__.py  cli.py  config.py  context.py  engine.py  execution.py  projects.py  vcs.py  verification.py
src/ai_dev_assistant/agents/: base.py  orchestrator.py  reflector.py  registry.py  reviewer.py
src/ai_dev_assistant/docs/: writer.py
src/ai_dev_assistant/evals/: __init__.py  graders.py  harness.py
src/ai_dev_assistant/knowledge/: base.py  extract.py  graph.py  repo_map.py
src/ai_dev_assistant/llm/: anthropic_provider.py  claude_sdk_provider.py  client.py  errors.py  factory.py  jsonout.py  pricing.py  provider.py  record_replay.py  resilience.py  schemas.py  usage.py
src/ai_dev_assistant/memory/: embeddings.py  store.py  vector.py
src/ai_dev_assistant/orchestration/: events.py  message_bus.py  run_control.py  run_store.py  scheduler.py  session_pool.py  task.py  trace.py
src/ai_dev_assistant/security/: redaction.py
src/ai_dev_assistant/tools/: registry.py
src/ai_dev_assistant/web/: server.py
src/ai_dev_assistant/web/static/: app.js  index.html  styles.css  ui.js
tests/: test_engine_e2e.py  test_engine_integration.py  test_evals.py  test_execution.py  test_extract.py  test_graph.py  test_memory.py  test_plan_mode.py  test_pool.py  test_reengage.py  test_reliability.py  test_routing.py  test_sdk_provider.py  test_vector.py  test_web.py
