[project]
name = "ai-dev-assistant"
version = "0.1.0"
description = "Multi-agent AI dev assistant: an orchestrator routes work to specialized agents that run in parallel and share memory, a knowledge base, and a knowledge graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "fastembed>=0.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ai-dev-assistant = "ai_dev_assistant.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
